# Cuarenta

./: CMakeLists.txt  README.md  ansi.h  bot.cpp  bot.h  cli.cpp  cli.h  cli_parse.cpp  cli_parse.h  cli_render.cpp  cli_render.h  cuarenta.cpp  cuarenta.h  data.csv  data.py  dynamic_array.h  game_state.h  main  main.cpp  movegen.cpp  movegen.h  possible_moves.txt  rank.h
